# mpl-token-metadata

clients/rust/: Cargo.toml
